--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,6 +1,3 @@
 <ul class="heroes">
-    <li *ngFor="let element of heroes" (click)="onClick(element)" [class.selected]="element === selectHero"><span class="badge">{{element.id}}</span> {{element.name}} </li>
+        <li routerLink="/hero-detail/{{element.id}}" *ngFor="let element of heroes"><span class="badge">{{element.id}}</span> {{element.name}}</li>   
 </ul>
-<div *ngIf="selectHero">
-    <app-hero-detail [selectHero]="selectHero"></app-hero-detail>
-</div>
